--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button id="three" class="num">3</button>
             <button id="minus" class="operator">-</button>
             <button id="zero" class="num">0</button>
-            <button id="dot" class="num">.</button>
+            <button id="dot">.</button>
             <button id="equal">=</button>
         </div>
     </div>
