Add keyboard support, crush bugs

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
         </div>
         <div id="calcBody">
-            <button id="c">C</button>
+            <button id="c">CE/C</button>
             <button id="backspace">&lt--</button>
             <button id="percentage" class="operator">%</button>
             <button id="divide" class="operator">/</button>
             <button id="seven"class="num" >7</button>
             <button id="eight"class="num">8</button>
             <button id="nine" class="num">9</button>
-            <button id="multiply" class="operator">X</button>
+            <button id="times" class="operator">X</button>
             <button id="four" class="num">4</button>
             <button id="five" class="num">5</button>
             <button id="six" class="num">6</button>
